--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.0",
+    "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "zustand": "^4.4.4"
